# equinox-tutorial

./: .docker-compose.yml.un~  .dockerignore  .gitattributes  .gitignore  Dockerfile  Dog.sln  README.md  Tutorial.sln  build.fsx  codefresh.yml  docker-compose.yml  docker-compose.yml~  lease.proto  paket.dependencies  wait-for.sh
api/: .gitignore  Lease.sln  Tutorial.sln  build.fsx  paket.dependencies
app/: entrypoint.sh  package.json
chrome/: Dockerfile  README.md
client/: package.json
docs/: Dockerfile  pyproject.toml
docs/docs/: .pages  index.md
docs/docs/services/: graphql-api.md  index.md  web-app.md
fable-web-app/: .env  README.md  build.fsx  package-lock.json  package.json  paket.dependencies  webpack.config.js
finance/: .dockerignore  Dockerfile  README.md  paket.dependencies
finance-api/: .gitignore  build.fsx  paket.dependencies
graphql-api/: .dockerignore  .gitignore  .graphqlconfig.yaml  Dockerfile  Graphql.sln  README.md  Solution.sln  build.fsx  paket.dependencies  snowflaqe.json  snowflaqePrivate.json  snowflaqePublic.json
graphql-playground/: .graphqlconfig.yaml  Dockerfile
handbook/: Dockerfile  mkdocs.yml  nginx.conf
lease-api/: .dockerignore  .gitignore  Dockerfile  README.md  build.fsx  paket.dependencies
proto/: README.md  build.fsx  paket.dependencies
protobuf/: lease.proto
protos/: .dockerignore  .gitignore  Dockerfile  README.md  buf.gen.yaml  buf.yaml  build.fsx
proxy/: Dockerfile  README.md  nginx.conf
pulumi/: Pulumi.prod.yaml  README.md  bucket.ts  config.ts  eventstore.ts  graphqlApi.ts  handbook.ts  zone.ts  (+10 more)
(+677 files in other folders)
