[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Documentation for cosmicdealership.com"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^6.1.4"
mkdocs-awesome-pages-plugin = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
